--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,9 @@
 .git
 .gitignore
 
+# Node
+node_modules/
+
 # Python
 __pycache__
 *.py[cod]
@@ -14,8 +17,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
+# Keep lib/ - used by Node.js app
 parts/
 sdist/
 var/
